--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "repository",
-    "test": "jest"
+    "url": "repository"
   },
   "keywords": [
     "react",
