--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "type": "commonjs",
   "scripts": {
+    "dev": "webpack --mode development",
     "build": "npm run compile && webpack --mode production",
     "compile": "tsc"
   },
@@ -30,11 +31,21 @@
     "@babel/preset-react": "^7.22.15",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.14",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "node-sass": "^9.0.0",
     "path": "^0.12.7",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
