--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "name-library",
-  "version": "1.0.0",
-  "description": "description of library",
+  "name": "react-dev-lib",
+  "version": "1.1.0",
+  "description": "esta libreria fue creada con el proposito de probar el repository de react-dev-lib que es para crear librerias de una manera rapida y sencilla con react, typescript y sass",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack serve --mode development",
     "build": "npm run compile && webpack --mode production",
     "compile": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "repository"
+    "url": "https://github.com/jefferson-lopez-dev/react-dev-lib.git"
   },
   "keywords": [
     "react",
     "typescript",
     "biblioteca"
   ],
-  "author": "Your Name",
+  "author": "jeffersonlopezmendoza343@gmail.com",
   "license": "MIT",
   "peerDependencies": {
     "react": "^18"
@@ -33,9 +33,13 @@
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
+    "react-dev-lib": "^1.1.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
@@ -43,9 +47,7 @@
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "mini-css-extract-plugin": "^2.7.6"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
