--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "react-dev-lib",
-  "version": "1.1.0",
+  "version": "1.3.5",
   "description": "esta libreria fue creada con el proposito de probar el repository de react-dev-lib que es para crear librerias de una manera rapida y sencilla con react, typescript y sass",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build": "npm run compile && webpack --mode production",
+    "dev": "npm run watch-dev",
+    "watch-dev": "webpack serve --mode development",
+    "watch-sass": "sass --watch src/sass/index.scss:src/sass/index.css",
+    "build": "sass src/sass/index.scss:src/sass/index.css && npm run compile && webpack --mode production",
     "compile": "tsc"
   },
   "repository": {
@@ -39,7 +41,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
-    "react-dev-lib": "^1.1.0",
+    "react-dev-lib": "^1.3.5",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
