organice estruture of the folders hidden

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,13 @@
+app
+client
+dist/app
+dist/src
+dist/library.js.LICENSE.txt
+library.js
 node_modules
 src
-client
+.babelrc
+.gitignore
 package-lock.json
 tsconfig.json
-.babelrc
 webpack.config.js
-app
-dist/app
-dist/library.js.LICENCE.txt
