--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-lib",
-  "version": "1.3.6",
-  "description": "esta libreria fue creada con el proposito de probar el repository de react-dev-lib que es para crear librerias de una manera rapida y sencilla con react, typescript y sass",
+  "version": "1.3.7",
+  "description": "This library has been created with the purpose of testing the react-dev-lib repository, which is designed to facilitate the rapid and straightforward development of libraries using React, TypeScript, and Sass. Our library focuses on providing a versatile and efficient development environment for developers to create, test, and distribute their own React libraries effectively. We simplify the development process, allowing programming professionals to focus on crafting high-quality features and components, rather than being burdened by configuration and tedious tasks. Make the most of react-dev-lib to expedite your development and elevate your projects to the next level.",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
