new arquitecture (beta)

--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "type": "commonjs",
   "scripts": {
     "dev": "npm run watch-dev",
-    "watch-dev": "webpack serve --mode development",
     "watch-sass": "sass --watch src/sass/index.scss:src/sass/index.css",
-    "build": "sass src/sass/index.scss:src/sass/index.css && npm run compile && webpack --mode production && npm run cleanup",
-    "compile": "tsc",
-    "cleanup": "node cleanup.js"
+    "build": "sass src/sass/index.scss:src/sass/index.css && npm run compile",
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
@@ -29,28 +27,11 @@
     "react": "^18"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "node-sass": "^9.0.0",
-    "path": "^0.12.7",
-    "mart-dl": "^0.0.1",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.5"
   }
 }
