--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.1",
   "description": "This library has been created with the purpose of testing the mart-dl repository, which is designed to facilitate the rapid and straightforward development of libraries using React, TypeScript, and Sass. Our library focuses on providing a versatile and efficient development environment for developers to create, test, and distribute their own React libraries effectively. We simplify the development process, allowing programming professionals to focus on crafting high-quality features and components, rather than being burdened by configuration and tedious tasks. Make the most of react-dev-lib to expedite your development and elevate your projects to the next level.",
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "commonjs",
   "scripts": {
     "dev": "npm run watch-dev",
     "watch-sass": "sass --watch src/sass/index.scss:src/sass/index.css",
     "build": "sass src/sass/index.scss:src/sass/index.css && npm run compile",
-    "compile": "tsc"
+    "compile": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -23,15 +22,23 @@
   ],
   "author": "jeffersonlopezmendoza343@gmail.com",
   "license": "MIT",
-  "peerDependencies": {
-    "react": "^18"
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/react": "7.5.3",
+    "@storybook/react-vite": "7.5.3",
+    "@storybook/testing-library": "0.2.2",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "typescript": "^5.2.2",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.5"
+    "storybook": "7.5.3",
+    "typescript": "^5.2.2"
   }
 }
