--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "keywords": [
     "react",
     "typescript",
-    "biblioteca"
+    "biblioteca",
+    "storybook"
   ],
   "author": "jeffersonlopezmendoza343@gmail.com",
   "license": "MIT",
