ignore folder stories of the components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "skipLibCheck": true
   },
   "include": ["packages/**/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "packages/**/**/stories"]
 }
