--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "jeffersonlopezmendoza343@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "mart-dl": "^0.0.3",
     "react": "^18",
     "react-dom": "^18.2.0"
   },
