--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "This library has been created with the purpose of testing the mart-dl repository, which is designed to facilitate the rapid and straightforward development of libraries using React, TypeScript, and Sass. Our library focuses on providing a versatile and efficient development environment for developers to create, test, and distribute their own React libraries effectively. We simplify the development process, allowing programming professionals to focus on crafting high-quality features and components, rather than being burdened by configuration and tedious tasks. Make the most of react-dev-lib to expedite your development and elevate your projects to the next level.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "dev": "npm run watch-dev",
     "watch-sass": "sass --watch src/sass/index.scss:src/sass/index.css",
-    "build": "sass src/sass/index.scss:src/sass/index.css && npm run compile",
-    "compile": "tsc",
+    "build": "sass src/sass/index.scss:src/sass/index.css && pnpm run tsc",
+    "build-tokens-sass": "node ./scripts/buildTokensToSass",
+    "tsc": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -25,7 +27,8 @@
   "author": "Jefferson Lopez <jeffersonlopezmendoza343@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "mart-dl": "^0.0.6",
+    "mart-desing-token": "^1.0.0",
+    "mart-obj-to-sass": "^1.0.0",
     "react": "^18",
     "react-dom": "^18.2.0"
   },
